<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/title"
            style="@style/TextSubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:text="@string/support_info_title"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phoneText"
            style="@style/TextTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/support_info_phone"
            android:textColor="@color/royal_orange"
            android:textSize="@dimen/text_26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/finishButton"
            style="@style/Button.Purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/default_exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>