<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/title"
            style="@style/TextTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_80"
            android:gravity="center"
            android:paddingStart="@dimen/margin_24"
            android:paddingEnd="@dimen/margin_24"
            android:text="@string/onboarding_title"
            android:textSize="@dimen/text_26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/imagesItemsLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginBottom="@dimen/margin_24"
            app:layout_constraintBottom_toTopOf="@id/itemsButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imagesItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemsButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_40"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/nextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            style="@style/Button.Purple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/onboarding_next_text"
            app:layout_constraintBottom_toTopOf="@+id/skipBtn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/padding_16"
            android:text="@string/onboarding_skip_text"
            android:textColor="@color/ship_cove"
            android:textSize="@dimen/text_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>